--- a/lacrei-front-end/app/globals.css
+++ b/lacrei-front-end/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -5,6 +7,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-nunito: 'Nunito', sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
